src/main/webapp/public/css/euregjug.css
/*
Copyright 2015 EuregJUG.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

#upcomingEvents ol {
    list-style: none;    
    padding-left: 0;
}

#upcomingEvents ol li {    
    margin-bottom: 2em;
}

#upcomingEvents ol li span.title {
   font-weight:bold;
   display:block;
   margin-bottom: 0.5em;
}

#sponsors ul {
    list-style: none;    
    padding-left: 0;
}

#sponsors ul li {        
    padding-left: 0;
}

.links img {
    max-width: 250px;
}

.ulist ul li p {
    margin-bottom: inherit;
}

.imageblock .content {
    padding: 0;
    border: none;
}

.imageblock .content img {
    max-width: 100%;
}

.imageblock.pull-right .content {
    padding-left: 1em;    
}

.nav_previous {
    text-align:left;
}

.nav_home {
    text-align:center;
}

.nav_home span.button.disabled {
    border:none;
    box-shadow: none;
    opacity: 1;
}

.nav_next {
    text-align:right;
}

